tests/errors/sample-table-too-large.spcasmtest
org 0

sampletable

macro yoshi
	brr "../yoshi.wav": 0-8
	brr "../yoshi.wav": 0-8
	brr "../yoshi.wav": 0-8
	brr "../yoshi.wav": 0-8
endmacro

macro manyyoshi
	%yoshi()
	%yoshi()
	%yoshi()
	%yoshi()
endmacro

macro verymanyyoshi
	%manyyoshi()
	%manyyoshi()
	%manyyoshi()
	%manyyoshi()
endmacro

macro toomanyyoshi
	%verymanyyoshi()
	%verymanyyoshi()
	%verymanyyoshi()
	%verymanyyoshi()
	%verymanyyoshi()
	%verymanyyoshi()
endmacro

%toomanyyoshi()
